# dapp-template

./: .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml  docs.yml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  windows.yml
app/: Cargo.toml
app/src/: main.rs
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  lib.rs
state/: Cargo.toml
state/src/: lib.rs  state.rs
tests/: gclient_test.rs  question_answer_on_node.rs  test.rs  tests.rs
xtask/src/: main.rs
