[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
app-io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
hashbrown = "0.13"

[build-dependencies]
app-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }

[dev-dependencies]
app-state = { path = "state" }
gtest = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["debug"] }
tokio = "1"
gclient = { git = "https://github.com/gear-tech/gear.git" }

[features]
dummy = []
default = ["dummy"]

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
members = ["state"]
