[package]
name = "app-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear" }
gstd = { git = "https://github.com/gear-tech/gear" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
