[package]
name = "app-state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
# TODO: pin to the "stable" branch before the merge.
gmeta = { git = "https://github.com/gear-tech/gear.git", features = ["codegen"] }
app-io = { path = "../io" }

[build-dependencies]
# TODO: pin to the "stable" branch before the merge.
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"] }

[features]
binary-vendor = []
